<resources>
    <string name="app_name">WordBrain Helper</string>
    <string name="app_desc">Un aiutino veloce per risolvere i livelli di WordBrain in cui ti sei bloccato</string>
    <string name="titolo_app">Cerca soluzioni WordBrain</string>
    <string name="Autore">Gabriele Galluzzo</string>
    <string name="action_about">Informazioni</string>

    <string name="giaRisoltoRegexp"> \\(Già risolto\\)</string>
    <string name="giaRisolto"> (Già risolto)</string>

    <string name="txtLabel1">Livello</string>
    <string name="txtLabel2">Regexp lung.\nparole (es. 457)</string>
    <string name="txtLabel5">Lettere rompicapo</string>
    <string name="txtParole">Possibili soluzioni: </string>
</resources>
