<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.utente.wordbrainhelper.MainActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <requestFocus />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:id="@+id/customView1"
        android:background="@android:color/black"
        android:layout_alignTop="@+id/space"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titolo_app"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:textStyle="bold|italic"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/transparent"
        android:layout_below="@+id/txtLettereRompicapo"
        android:layout_alignParentStart="true"
        android:id="@+id/hLine" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cerca"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="searchClick"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/txtLunghezzaParole" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtLabel1"
        android:id="@+id/textView2"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_below="@+id/space"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/space"
        android:layout_alignEnd="@+id/spinner"
        android:gravity="center"
        android:layout_alignBottom="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtLabel2"
        android:id="@+id/textView3"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_below="@+id/space"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:layout_alignStart="@+id/txtLunghezzaParole" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtLunghezzaParole"
        android:layout_below="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:gravity="center" />
    <Space
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true"
        android:id="@+id/space2" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lstParole"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtParole"
        android:id="@+id/textView4"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_alignTop="@+id/hLine"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:id="@+id/space" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtLettereRompicapo"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:inputType="textCapCharacters"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/hLine"
        android:layout_alignEnd="@+id/hLine" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtLabel5"
        android:id="@+id/textView5"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_below="@+id/space3"
        android:layout_alignParentStart="true" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:id="@+id/space3"
        android:layout_below="@+id/txtLunghezzaParole"
        android:layout_centerHorizontal="true" />

    <CheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mostra solo\nnon risolti"
        android:id="@+id/checkedTextView"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:clickable="true"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"

        android:textStyle="bold"
        android:layout_below="@+id/txtLunghezzaParole"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
